Added section on security
SVN-Revision: 969

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -22,7 +22,7 @@ MODEL_FILE_TYPE=EA
 LOGICAL_MODEL=Logical View.Logical Model
 DATA_MODEL=Logical View.Data Model
 INCLUDE_PACKAGE=domain
-EXCLUDE_PACKAGE=sametable,other
+EXCLUDE_PACKAGE=
 EXCLUDE_NAME=
 
 ##################################################################################
@@ -38,7 +38,7 @@ EXCLUDE_NAME=
 #  CACHE_PATH is being used by the EHCache to store its cache files on disk
 ##################################################################################
 USE_JNDI_BASED_CONNECTION=no
-DB_JNDI_URL=SDK
+DB_JNDI_URL=java:/SDK
 
 DB_DRIVER=oracle.jdbc.driver.OracleDriver
 DB_CONNECTION_URL=jdbc:oracle:thin:@cbiodb30.nci.nih.gov:1521:CBTEST
@@ -101,3 +101,28 @@ GENERATE_WSDD=true
 ##################################################################################
 SERVER_TYPE=other
 SERVER_URL=http://localhost:8080/${PROJECT_NAME}
+
+##################################################################################
+#  SECURITY DATABASE CONNECTION PROPERTIES
+# 
+#  If CSM_USE_JNDI_BASED_CONNECTION=yes then CSM_DB_JNDI_URL is used to obtain the 
+#  connection and get data. 
+#  If CSM_USE_JNDI_BASED_CONNECTION=no then CSM_DB_DRIVER, CSM_DB_CONNECTION_URL, 
+#  CSM_DB_USERNAME and CSM_DB_PASSWORD is used to initialize the collection and 
+#  get data.
+#
+#  CSM_DB_DIALECT is used by the Hibernate to prepare the database specific queries
+#  If you are using instance level security then the CSM tables are required to be 
+#  present in the same schema as the domain object resides
+##################################################################################
+CSM_USE_JNDI_BASED_CONNECTION=no
+CSM_DB_JNDI_URL=java:/SDK
+
+CSM_DB_DRIVER=oracle.jdbc.driver.OracleDriver
+CSM_DB_CONNECTION_URL=jdbc:oracle:thin:@cbiodb30.nci.nih.gov:1521:CBTEST
+CSM_DB_USERNAME=CACORESDK_ANT
+CSM_DB_PASSWORD=c0r3nt!
+
+CSM_DB_DIALECT=org.hibernate.dialect.OracleDialect
+
+CSM_PROJECT_NAME=sdk
