Security configuration added
SVN-Revision: 978

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -15,6 +15,7 @@ system.config.client.remote.dir=${system.config.dir}/package/remote-client
 system.config.client.webapp.dir=${system.config.dir}/package/webapp
 system.config.client.ws.dir=${system.config.dir}/package/ws-client
 system.config.security.dir=${system.config.dir}/security
+system.config.web.classes.dir=${system.config.dir}/web/WEB-INF/classes
 
 output.conf.dir=${output.project.dir}/conf
 output.codegen.config.dir=${output.project.dir}/${codegen.config.dir}
@@ -33,6 +34,7 @@ package.client.remote.lib.dir=${package.client.remote.dir}/lib
 package.client.remote.conf.dir=${package.client.remote.dir}/conf
 package.client.local.dir=${package.dir}/local-client
 package.client.local.lib.dir=${package.client.local.dir}/lib
+package.client.local.conf.dir=${package.client.local.dir}/conf
 package.client.ws.dir=${package.dir}/ws-client
 package.client.ws.lib.dir=${package.client.ws.dir}/lib
 package.client.ws.conf.dir=${package.client.ws.dir}/conf
@@ -41,8 +43,11 @@ package.system.dir=${package.dir}/webapp
 bean.file=${PROJECT_NAME}-beans.jar
 orm.file=${PROJECT_NAME}-orm.jar
 
-security.config.original.file=csm.new.hibernate.cfg.xml
-security.config.file=${CSM_PROJECT_NAME}.${security.config.original.file}
+csm.security.config.original.file=csm.new.hibernate.cfg.xml
+csm.security.config.file=${CSM_PROJECT_NAME}.${csm.security.config.original.file}
+
+application.config.file=application-config.xml
+application.config.security.file=application-config-security.xml
 
 xml.comment.start=<!--
 xml.comment.end=-->
