--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -6,9 +6,27 @@
 #
 #  NAMESPACE_PREFIX is used to create the XSDs. If XSDs are to be used for the
 #  cagrid, the value of the NAMESPACE_PREFIX is same as the GME namespace
+#
+#  Value of the WEBSERVICE_NAME property will be used to:
+#		1) create deploy.wssd
+#
 ##################################################################################
 PROJECT_NAME=example
 NAMESPACE_PREFIX=gme://caCORE.caCORE/3.2/
+
+CSM_PROJECT_NAME=sdk
+SECURITY_ENABLED=no
+
+WEBSERVICE_NAME=${PROJECT_NAME}Service
+
+##################################################################################
+#  APPLICATION SERVER PROPERTIES
+#
+#  SERVER_TYPE if set to jboss will exclude log4j.jar from the war file 
+#              any other value will include the log4j.jar in the war file
+##################################################################################
+SERVER_TYPE=other
+SERVER_URL=http://localhost:8080/${PROJECT_NAME}
 
 ################################################################################## 
 #  MODEL PROPERTIES
@@ -47,60 +65,6 @@ DB_PASSWORD=c0r3nt!
 
 DB_DIALECT=org.hibernate.dialect.OracleDialect
 
-##################################################################################
-#  WEB SERVICE PROPERTIES
-#
-#  Value of the WEBSERVICE_NAME property will be used to:
-#		1) create deploy.wssd
-#
-#  Value of the WEB_SERVER_HOST_NAME/WEB_SERVER_PORT/WEBSERVICE_NAME property will be used to:
-#		* create the Web Service deploy/un-deploy URL
-#
-##################################################################################
-WEBSERVICE_NAME=${PROJECT_NAME}Service
-
-##################################################################################
-#  ADVANCED PROPERTIES
-# 
-#  CACHE_PATH is being used by the EHCache to store its cache files on disk
-#  java.io.tmpdir will create the cache files in the temporary directory. 
-#  User can choose to specify any absolute path for the cache files
-##################################################################################
-CACHE_PATH=java.io.tmpdir
-
-
-##################################################################################
-#  CODE GENERATION OPTIONS
-#  Following properties are used to enable or disable code generation step. These
-#  properties accept values of either 'true' or 'false'. Setting the value to
-#  false disables a component and setting value to true enables the component
-#
-#  VALIDATE_LOGICAL_MODEL if enabled checks for the validity of the object model
-#  VALIDATE_MODEL_MAPPING if enabled checks for the validity of the object to 
-#                         database mapping 
-#  GENERATE_HIBERNATE_MAPPING if enabled generates Hibernate related artifacts
-#  GENERATE_BEANS if enabled generates Java beans from the object model
-#  GENERATE_CASTOR_MAPPING if enabled generates castor mapping files for the 
-#                          object model
-#  GENERATE_XSD if enabled generates the XSD
-#  GENERATE_WSDD if enabled generates the web services deployment file
-##################################################################################
-VALIDATE_LOGICAL_MODEL=true
-VALIDATE_MODEL_MAPPING=true
-GENERATE_HIBERNATE_MAPPING=true
-GENERATE_BEANS=true
-GENERATE_CASTOR_MAPPING=true
-GENERATE_XSD=true
-GENERATE_WSDD=true
-
-##################################################################################
-#  APPLICATION SERVER PROPERTIES
-#
-#  SERVER_TYPE if set to jboss will exclude log4j.jar from the war file 
-#              any other value will include the log4j.jar in the war file
-##################################################################################
-SERVER_TYPE=other
-SERVER_URL=http://localhost:8080/${PROJECT_NAME}
 
 ##################################################################################
 #  SECURITY DATABASE CONNECTION PROPERTIES
@@ -125,4 +89,38 @@ CSM_DB_PASSWORD=c0r3nt!
 
 CSM_DB_DIALECT=org.hibernate.dialect.OracleDialect
 
-CSM_PROJECT_NAME=sdk
+##################################################################################
+##################################################################################
+#  CODE GENERATION OPTIONS
+##################################################################################
+##################################################################################
+#  Following properties are used to enable or disable code generation step. These
+#  properties accept values of either 'true' or 'false'. Setting the value to
+#  false disables a component and setting value to true enables the component
+#
+#  VALIDATE_LOGICAL_MODEL if enabled checks for the validity of the object model
+#  VALIDATE_MODEL_MAPPING if enabled checks for the validity of the object to 
+#                         database mapping 
+#  GENERATE_HIBERNATE_MAPPING if enabled generates Hibernate related artifacts
+#  GENERATE_BEANS if enabled generates Java beans from the object model
+#  GENERATE_CASTOR_MAPPING if enabled generates castor mapping files for the 
+#                          object model
+#  GENERATE_XSD if enabled generates the XSD
+#  GENERATE_WSDD if enabled generates the web services deployment file
+##################################################################################
+VALIDATE_LOGICAL_MODEL=true
+VALIDATE_MODEL_MAPPING=true
+GENERATE_HIBERNATE_MAPPING=true
+GENERATE_BEANS=true
+GENERATE_CASTOR_MAPPING=true
+GENERATE_XSD=true
+GENERATE_WSDD=true
+
+##################################################################################
+#  ADVANCED PROPERTIES
+# 
+#  CACHE_PATH is being used by the EHCache to store its cache files on disk
+#  java.io.tmpdir will create the cache files in the temporary directory. 
+#  User can choose to specify any absolute path for the cache files
+##################################################################################
+CACHE_PATH=java.io.tmpdir
