--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -19,7 +19,7 @@ SECURITY_ENABLED=no
 
 WEBSERVICE_NAME=${PROJECT_NAME}Service
 
-##################################################################################
+################################################################################## 
 #  APPLICATION SERVER PROPERTIES
 #
 #  SERVER_TYPE if set to jboss will exclude log4j.jar from the war file 
@@ -32,7 +32,7 @@ SERVER_URL=http://localhost:8080/${PROJECT_NAME}
 #  MODEL PROPERTIES
 #
 #  XMI_FILE specifies the name of the file which contains the object/data model. 
-#  The file is to be placed under models/xmi directory.
+#  The file is to be placed under models directory.
 ##################################################################################
 MODEL_FILE=sdk.xmi
 MODEL_FILE_TYPE=EA
@@ -65,10 +65,9 @@ DB_PASSWORD=c0r3nt!
 
 DB_DIALECT=org.hibernate.dialect.OracleDialect
 
-
 ##################################################################################
 #  SECURITY DATABASE CONNECTION PROPERTIES
-# 
+#
 #  If CSM_USE_JNDI_BASED_CONNECTION=yes then CSM_DB_JNDI_URL is used to obtain the 
 #  connection and get data. 
 #  If CSM_USE_JNDI_BASED_CONNECTION=no then CSM_DB_DRIVER, CSM_DB_CONNECTION_URL, 
@@ -118,7 +117,7 @@ GENERATE_WSDD=true
 
 ##################################################################################
 #  ADVANCED PROPERTIES
-# 
+#
 #  CACHE_PATH is being used by the EHCache to store its cache files on disk
 #  java.io.tmpdir will create the cache files in the temporary directory. 
 #  User can choose to specify any absolute path for the cache files
