Webservice bean is now configured in the Spring configuration file as well
SVN-Revision: 1015

--- a/SDK4/conf/system/web/WEB-INF/web.xml
+++ b/SDK4/conf/system/web/WEB-INF/web.xml
@@ -5,6 +5,7 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			/WEB-INF/classes/application-config.xml
+			/WEB-INF/classes/application-config-web.xml
 			/WEB-INF/classes/application-config-security.xml
 			/WEB-INF/classes/application-config-web-security.xml
 		</param-value>
