--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -16,6 +16,8 @@ NAMESPACE_PREFIX=gme://caCORE.caCORE/3.2/
 
 CSM_PROJECT_NAME=sdk
 SECURITY_ENABLED=no
+INSTANCE_LEVEL_SECURITY=no
+ATTRIBUTE_LEVEL_SECURITY=no
 
 WEBSERVICE_NAME=${PROJECT_NAME}Service
 
