Disabled security initially in order to facilitate QA testing.  Also, removed extraneous character '@' and a comment that were causing parsing errors during server startup.
SVN-Revision: 1029

--- a/SDK4/conf/system/web/WEB-INF/web.xml
+++ b/SDK4/conf/system/web/WEB-INF/web.xml
@@ -21,7 +21,7 @@
         </init-param>
 	</filter> 
 
-	<!--@SECURITY_START@-->
+	<!-- SECURITY_START
     <filter>
         <filter-name>AcegiFilters</filter-name>
         <filter-class>org.acegisecurity.util.FilterToBeanProxy</filter-class>
@@ -35,7 +35,7 @@
       <filter-name>AcegiFilters</filter-name>
       <url-pattern>/*</url-pattern>
     </filter-mapping>	
-	<!--@SECURITY_END@-->
+	SECURITY_END -->
 	
 	<filter-mapping> 
 		<filter-name>struts2</filter-name> 
