Changes for: [#8476] Allow users to change INCLUDE_SEARCH_EVENT_LISTENER?
SVN-Revision: 1051

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -67,6 +67,8 @@ DB_PASSWORD=c0r3nt!
 
 DB_DIALECT=org.hibernate.dialect.OracleDialect
 
+INCLUDE_SEARCH_EVENT_LISTENER=false
+
 ##################################################################################
 #  SECURITY DATABASE CONNECTION PROPERTIES
 #
