--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -15,9 +15,9 @@ PROJECT_NAME=example
 NAMESPACE_PREFIX=gme://caCORE.caCORE/3.2/
 
 CSM_PROJECT_NAME=sdk
-SECURITY_ENABLED=no
-INSTANCE_LEVEL_SECURITY=no
-ATTRIBUTE_LEVEL_SECURITY=no
+SECURITY_ENABLED=false
+INSTANCE_LEVEL_SECURITY=false
+ATTRIBUTE_LEVEL_SECURITY=false
 
 WEBSERVICE_NAME=${PROJECT_NAME}Service
 
