added maxmemory="512m" attribute to runXML task in order to accomodate large models.
SVN-Revision: 1067

--- a/SDK4/conf/system/package/remote-client/build.xml
+++ b/SDK4/conf/system/package/remote-client/build.xml
@@ -84,7 +84,7 @@
 	<target name="runXML" depends="compile" description="Runs the XML Utility test">
 		<SDKecho message="${ant.project.name}: Running the XML Utility test"/>
 		<mkdir dir="./output"/>
-		<java classname="TestXMLClient" fork="true">
+		<java classname="TestXMLClient" fork="true" maxmemory="512m">
 			<classpath refid="runtime" />
 		</java>
 	</target>
