--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -60,10 +60,10 @@ EXCLUDE_NAME=
 USE_JNDI_BASED_CONNECTION=no
 DB_JNDI_URL=java:/SDK
 
+DB_CONNECTION_URL=
+DB_USERNAME=
+DB_PASSWORD=
 DB_DRIVER=oracle.jdbc.driver.OracleDriver
-DB_CONNECTION_URL=jdbc:oracle:thin:@cbiodb30.nci.nih.gov:1521:CBTEST
-DB_USERNAME=CACORESDK_ANT
-DB_PASSWORD=c0r3nt!
 
 DB_DIALECT=org.hibernate.dialect.OracleDialect
 
@@ -83,10 +83,10 @@ DB_DIALECT=org.hibernate.dialect.OracleDialect
 CSM_USE_JNDI_BASED_CONNECTION=no
 CSM_DB_JNDI_URL=java:/SDK
 
+CSM_DB_CONNECTION_URL=
+CSM_DB_USERNAME=
+CSM_DB_PASSWORD=
 CSM_DB_DRIVER=oracle.jdbc.driver.OracleDriver
-CSM_DB_CONNECTION_URL=jdbc:oracle:thin:@cbiodb30.nci.nih.gov:1521:CBTEST
-CSM_DB_USERNAME=CACORESDK_ANT
-CSM_DB_PASSWORD=c0r3nt!
 
 CSM_DB_DIALECT=org.hibernate.dialect.OracleDialect
 
