Added targets for the release packaging
SVN-Revision: 1094

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -1,6 +1,11 @@
 codegen.dir=codegen
 system.dir=system
 
+release.dir=release
+release.binary.file=${release.dir}/cacoresdk.zip
+release.src.file=${release.dir}/cacoresdk-src.zip
+junit.dir=junit
+
 output.dir=output
 output.project.dir=${output.dir}/${PROJECT_NAME}
 output.src.dir=${output.project.dir}/src
