--- a/SDK4/.classpath
+++ b/SDK4/.classpath
@@ -2,6 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="codegen/core/src"/>
 	<classpathentry kind="src" path="system/src"/>
+	<classpathentry kind="src" path="output/example/src"/>
+	<classpathentry kind="src" path="output/example/package/remote-client/conf"/>
+	<classpathentry kind="src" path="output/example/package/remote-client/src"/>
+	<classpathentry kind="src" path="output/example/conf/codegen"/>
+	<classpathentry kind="src" path="codegen/templates/build/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="codegen/core/lib/commons-logging-1.1.jar"/>
 	<classpathentry kind="lib" path="codegen/core/lib/dom4j-1.4.jar"/>
