Fixed the release packaging
SVN-Revision: 1108

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -3,7 +3,9 @@ system.dir=system
 
 release.dir=release
 release.binary.file=${release.dir}/cacoresdk.zip
+release.binary.tar.file=${release.dir}/cacoresdk.tar
 release.src.file=${release.dir}/cacoresdk-src.zip
+release.src.tar.file=${release.dir}/cacoresdk-src.tar
 junit.dir=junit
 
 output.dir=output
