Added MySQL properties for connection pool
SVN-Revision: 1118

--- a/SDK4/local.properties
+++ b/SDK4/local.properties
@@ -1,3 +1,9 @@
+#DB_CONNECTION_URL=jdbc:mysql://cbiodb590.nci.nih.gov:3626/cacoresdk
+#DB_USERNAME=cacoresdk
+#DB_PASSWORD=cac#476
+#DB_DRIVER=org.gjt.mm.mysql.Driver
+#DB_DIALECT=org.hibernate.dialect.MySQLDialect
+
 DB_CONNECTION_URL=jdbc:oracle:thin:@cbiodb30.nci.nih.gov:1521:CBTEST
 DB_USERNAME=CACORESDK_ANT
 DB_PASSWORD=c0r3nt!
