Added JDOM jar in the local client lib directory
SVN-Revision: 1136

--- a/SDK4/build.xml
+++ b/SDK4/build.xml
@@ -320,6 +320,7 @@
 				<include name="ehcache*.*"/>
 				<include name="hibernate*.*"/>
 				<include name="jta*.*"/>	
+				<include name="jdom*.*"/>	
 				<include name="log4j*.*"/>
 				<include name="mysql*.*"/>
 				<include name="ojdbc*.*"/>
