Login config file for the CSM
SVN-Revision: 1137

--- a/SDK4/conf/system/package/local-client/build.xml
+++ b/SDK4/conf/system/package/local-client/build.xml
@@ -75,6 +75,7 @@
 		<SDKecho message="${ant.project.name}: Running the test"/>
 		<java classname="TestClient" fork="true">
 			<classpath refid="runtime" />
+			<sysproperty key="java.security.auth.login.config" value="${conf.dir}/login.config"/>
 		</java>
 	</target>
 	
