Changed comments in the file
SVN-Revision: 1145

--- a/SDK4/conf/system/package/local-client/conf/login.config
+++ b/SDK4/conf/system/package/local-client/conf/login.config
@@ -9,9 +9,11 @@
 };
 
 
-#@CSM_PROJECT_NAME@{
-#  gov.nih.nci.security.authentication.loginmodules.LDAPLoginModule Required
-#  ldapHost="ldaps://ncids4a.nci.nih.gov:636"
-#  ldapSearchableBase="ou=nci,o=nih"
-#  ldapUserIdLabel="cn";
-#};
+/**
+@CSM_PROJECT_NAME@{
+  gov.nih.nci.security.authentication.loginmodules.LDAPLoginModule Required
+  ldapHost="ldaps://ncids4a.nci.nih.gov:636"
+  ldapSearchableBase="ou=nci,o=nih"
+  ldapUserIdLabel="cn";
+};
+**/
